[package]
name = "dodo"
version = "0.1.0"
authors = ["micouy <szpontaniczny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
serde = { version = "*", features = [ "derive" ] }
dynfmt = { version = "*", features = ["curly"] }
rustc-hash = "*"
ansi_term = "*"
