[package]
name = "dodo"
version = "0.1.0"
authors = ["micouy <szpontaniczny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1", features = [ "derive" ] }
dynfmt = { version = "0.1", features = ["curly"] }
twox-hash = "1.5"
ansi_term = "0.12"
daggy = "0.7"

[dev-dependencies]
pretty_assertions = "0.6"
